--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -321,8 +321,8 @@ es = Elasticsearch(
 ==== API Key authentication
 
 You can configure the client to use {es}'s API Key for connecting to your 
-cluster. Note that you need the API Key credential representing the Base64-encoding of the id and api_key value 
-https://www.elastic.co/guide/en/elasticsearch/reference/current/security-api-create-api-key.html[generated from the API Key].
+cluster. Note that you need the API Key encoding you can 
+https://www.elastic.co/guide/en/kibana/current/api-keys.html#create-api-key[generated in Kibana].
 
 [source,python]
 ----
