--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -320,9 +320,7 @@ es = Elasticsearch(
 [[auth-apikey]]
 ==== API Key authentication
 
-You can configure the client to use {es}'s API Key for connecting to your 
-cluster. Note that you need the API Key encoding you can 
-https://www.elastic.co/guide/en/kibana/current/api-keys.html#create-api-key[generated in Kibana].
+You can configure the client to use {es}'s API Key for connecting to your cluster. These can be generated through the https://www.elastic.co/guide/en/elasticsearch/reference/current/security-api-create-api-key.html[Elasticsearch Create API key API] or https://www.elastic.co/guide/en/kibana/current/api-keys.html#create-api-key[Kibana Stack Management].
 
 [source,python]
 ----
