--- a/docs/guide/connecting.asciidoc
+++ b/docs/guide/connecting.asciidoc
@@ -251,21 +251,21 @@ or via the per-request `.options()` method:
 from elasticsearch import Elasticsearch
 
 # Authenticate from the constructor
-es = Elasticsearch(
+client = Elasticsearch(
     "https://localhost:9200",
     ca_certs="/path/to/http_ca.crt",
     basic_auth=("username", "password")
 )
 
 # Authenticate via the .options() method:
-es.options(
+client.options(
     basic_auth=("username", "password")
 ).indices.get(index="*")
 
 # You can persist the authenticated client to use
 # later or use for multiple API calls:
-auth_client = es.options(
-    api_key=("api-key-id", "api-key-secret")
+auth_client = client.options(
+    api_key=("api-key")
 )
 for i in range(10):
     auth_client.index(
@@ -287,7 +287,7 @@ username and password within a tuple:
 from elasticsearch import Elasticsearch
 
 # Adds the HTTP header 'Authorization: Basic <base64 username:password>'
-es = Elasticsearch(
+client = Elasticsearch(
     "https://localhost:9200",
     ca_certs="/path/to/http_ca.crt",
     basic_auth=("username", "password")
@@ -309,7 +309,7 @@ and https://www.elastic.co/guide/en/elasticsearch/reference/{branch}/security-ap
 from elasticsearch import Elasticsearch
 
 # Adds the HTTP header 'Authorization: Bearer token-value'
-es = Elasticsearch(
+client = Elasticsearch(
     "https://localhost:9200",
     bearer_auth="token-value"
 )
@@ -329,10 +329,10 @@ https://www.elastic.co/guide/en/elasticsearch/reference/current/security-api-cre
 from elasticsearch import Elasticsearch
 
 # Adds the HTTP header 'Authorization: ApiKey <base64 api_key.id:api_key.api_key>'
-es = Elasticsearch(
+client = Elasticsearch(
     "https://localhost:9200",
     ca_certs="/path/to/http_ca.crt",
-    api_key=("api_key.id", "api_key.api_key")
+    api_key=("api_key")
 )
 ----
 
